src/objects/Project_Role__c.object
<CustomObject>
    <description>What role the person listed plays in the project.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N300000026nKFEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor/Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>R00N300000027QNzEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Contact at BINGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Agency Executive Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Agency Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Professor</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <label>Projects</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipName>R00N300000026nKAEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Role</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Project Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>